--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     update();
 
     // 🎤 Voice Recognition
-    const URL = "./"; // مسیر پوشه مدل خودت
+    const URL = "https://b-sarkheil.github.io/VoiceTennis/"; // مسیر پوشه مدل خودت
 
     async function createModel() {
         const checkpointURL = URL + "model.json";
